Fix: Fixed a bug

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
   </section>
 
   <section class="creations-section">
-    <h2 class="creation-heading">Our creations</h2>
+    <div class="creation-flex">
+      <h2 class="creation-heading">Our creations</h2>
+      <div class="btn see-all desktop-btn">See all</div>
+    </div>
+    
 
     <div class="creation-grid">
       <div class="grid earth">
@@ -116,7 +120,7 @@
 
     </div>
 
-    <button class="btn see-all">See all</button>
+    <div class="btn see-all mobile-btn">See all</div>
 
   </section>
 
